--- a/index.html
+++ b/index.html
@@ -284,59 +284,44 @@
                     </div>
                 </div>
             </div>
-            <div class="cal" style="margin-top: 1em;">
-            <div class="month">
-                <ul>
-                    <li class="prev">&#10094;</li>
-                    <li class="next">&#10095;</li>
-                    <li>
-                        August<br>
-                        <span style="font-size:18px">2018</span>
-                    </li>
-                </ul>
-            </div>
-            <ul class="weekdays">
-                <li>Mo</li>
-                <li>Tu</li>
-                <li>We</li>
-                <li>Th</li>
-                <li>Fr</li>
-                <li>Sa</li>
-                <li>Su</li>
-            </ul>
-            <ul class="days">  
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
-                <li>4</li>
-                <li>5</li>
-                <li>6</li>
-                <li>7</li>
-                <li>8</li>
-                <li>9</li>
-                <li><span class="active">10</span></li>
-                <li>11</li>
-                <li>12</li>
-                <li>13</li>
-                <li>14</li>
-                <li>15</li>
-                <li>16</li>
-                <li>17</li>
-                <li>18</li>
-                <li>19</li>
-                <li>20</li>
-                <li>21</li>
-                <li>22</li>
-                <li>23</li>
-                <li>24</li>
-                <li>25</li>
-                <li>26</li>
-                <li>27</li>
-                <li>28</li>
-                <li>29</li>
-                <li>30</li>
-                <li>31</li>
-            </ul>
+            <div class="cal" id="cal" style="margin-top: 1.5em;">
+                <div class="month">
+                    <span class="left button" id="prev"> &lang;</span>
+                    <span class="left hook"></span>
+                    <span class="month-year" id="label"> August 2018</span>
+                    <span class="right hook" id=""></span>
+                    <span class="right button" id="next"> &rang;</span>
+                </div>
+                <table id="days">
+                    <tr>
+                        <td>Sun</td>
+                        <td>Mon</td>
+                        <td>Tue</td>
+                        <td>Wed</td>
+                        <td>Thu</td>
+                        <td>Fri</td>
+                        <td>Sat</td>
+                    </tr>
+                </table>
+                <div class="cal-frame">
+                    <table class="curr">
+                        <tr>
+                            <td class="nil"></td><td class="nil"></td><td class="nil"></td><td>1</td><td>2</td><td>3</td><td>4</td>
+                        </tr>
+                        <tr>
+                            <td>5</td><td>6</td><td>7</td><td>8</td><td>9</td><td class="today">10</td><td>11</td>
+                        </tr>
+                        <tr>
+                            <td>12</td><td>13</td><td>14</td><td>15</td><td>16</td><td>17</td><td>18</td>
+                        </tr>
+                        <tr>
+                            <td>19</td><td>20</td><td>21</td><td>22</td><td>23</td><td>24</td><td>25</td>
+                        </tr>
+                        <tr>
+                            <td>26</td><td>27</td><td>28</td><td>29</td><td>30</td><td>31</td><td class="nil"></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
             <div class="hide">
                 <h3 id="brandi" class="side-link">Popular users</h3>
